2004-03-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/arpeggio.cc (width_callback): remove padding.
 
	* scm/define-grobs.scm (all-grob-descriptions): add padding.

	* scm/define-music-types.scm: remove make-music-by-name.

	* Documentation/user/lilypond.tely: doc patch by Edward Sutton.

2004-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/paper-score.cc (process): Output titles using make-title.

	* scm/output-ps.scm (output-stencil): Display directly instead of
	constructing string.
	(make-title): New function.

2004-03-01  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/lilypond-book.itely (Integrating LaTeX and
	music), Documentation/user/invoking.itexi (Invoking lilypond): 
	Move documentation of LaTeX packages for latin1 characters to the
	lilypond-book manual.

2004-03-01  Heikki Junes <hjunes@cc.hut.fi>

	* Documentation/topdocs/INSTALL.texi: small fix (by Matthias Kilian).

	* vimrc: add menu in console and shortcut <F10> for it.

	* vim/:
	* vim/compiler/:
	* vim/syntax/:
	* vim/indent/:
	* vim/ftplugin/: new directories.
	
	* vim/filetype.vim: new file.

	* lilypond.vim:	remove files (see next).
	* vim/syntax/lilypond.vim: new, renamed file (see prev).

	* vimrc: remove file (see next).
	* vim/ftplugin/lilypond.vim: new, renamed file (see prev).

	* vim/ftplugin/lilypond.vim: change dir for dictionary.
	add header. apply bindings only locally.

	* vim/indent/lilypond.vim: new file.

	* vim/ftplugin/lilypond.vim: remove errorformat.
	* vim/compiler/lilypond.vim: new file for errorformats.

	* Documentation/topdocs/INSTALL.texi: give easier orders.

	* ROADMAP: add vim/

2004-02-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/introduction.itely (Introduction): Use @image
	iso @html <img...>.  Add workaround for images in columns in info.

	* stepmake/aclocal.m4: Store computed version in variable.

	* configure.in: Export MAKEINFO_VERSION.

	* config.make.in (MAKEINFO_VERSION): Add.
