@@ -1,3 +1,14 @@
+2004-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/output-ps.scm (make-title, output-scopes): Further
+	development.
+
+	* input/test/title-markup.ly: New file.
+
+	* ps/lilyponddefs.ps: Disable PostScript titling.
+
+	* lily/paper-score.cc (process): Qoute PORT argument to make-title.
+
 2004-03-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/arpeggio.cc (width_callback): remove padding.
